changed expense model to a more general type - Transaction, which covers all sorta transaction instead of just expense. adapted data getter API to new model. changed and fixed the form for logging transaction.

--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -120,7 +120,8 @@ h3 {
   display: flex;
   flex-direction: column;
   width: 100%;
-  margin: auto;
+  max-width: 480px;  
+  margin: 0 auto;
 }
 
 label {
